# syntax-rust

./: .gitmodules  Cargo.toml
src/: block.rs  bounds.rs  expr.rs  generics.rs  grammar.rs  ident.rs  lexer.rs  lib.rs  lifetime.rs  module_name.rs  number.rs  parser.rs  path.rs  pattern.rs  statement.rs  trait_.rs  ty.rs  ty_name.rs  type_.rs  utils.rs
src/expr/: character.rs  fn_call.rs  if_.rs  int.rs  macro_invocation.rs  postfix.rs  prefix.rs  string.rs  struct_literal.rs  variable.rs
src/expr/struct_literal/: named_fields.rs  tuple_fields.rs
src/generics/: def.rs
src/grammar/: block.rs  expr.rs  item.rs  stmt.rs
src/grammar/item/: fn_.rs  struct_.rs  trait_.rs
src/ident/: camel_case.rs  screaming_snake_case.rs
src/item/: fn_def.rs  struct_def.rs  trait_def.rs  type_def.rs  use_decl.rs
src/item/struct_def/: named_fields.rs  tuple_fields.rs
src/number/: binary.rs  decimal.rs  hexadecimal.rs  octal.rs
src/parser/: block.rs  expr.rs  item.rs
src/parser/item/: fn_.rs
