[package]
name = "syntax-rust"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Provides highlighting for Rust code."
documentation = "https://docs.rs/syntax-rust"
homepage = "https://github.com/arzg/syntax-rust"
repository = "https://github.com/arzg/syntax-rust"

[dependencies]
dialect = "0.2"
logos = "0.11"
